--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ jobs:
     - stage: build docker image
       script:
       - docker build -t microsoft/terraform .
-      - docker run --rm microsoft/terraform -v $PWD/logs:/tf-test/.kitchen -it tf-test-container
+      - docker run -v $PWD/logs:/tf-test/.kitchen --rm microsoft/terraform 
  
