--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,6 @@ jobs:
     - stage: build docker image
       script:
       - docker build -t microsoft/terraform .
+      - mkdir logs
       - docker run -v $PWD/logs:/tf-test/.kitchen --rm microsoft/terraform 
  
